# greentic-operator

./: .gitignore  AUDIT.md  Cargo.toml  README.md
.codex/: OP-EV-PR-01.md  OP-EV-PR-02.md  OP-EV-PR-03.md  PR-03-operator-demo-send-to.md  PR-OP-EV-01_generic_http_ingress.md  PR-OP-EV-02_events_registry_and_routing.md  PR-OP-EV-03_remove_events_binaries.md  PR-OP-I18N-01_locale_routing.md
.codex/done/: OP-PR-06.md  OP-PR-07-domain-commands.md  OP-PR-08-domain-doctor-gating.md  OP-PR-09-slim-domain-repo-interop.md  OP-PR-10.md  OP-PR-11A.md  OP-PR-11B.md  OP-PR-11C.md  OP-PR-11D.md  OP-PR-11E.md  OP-PR01-Universal.md  OP-PR02-universal.md  PR-CARDKIT.md  PR-OP-01-060.md  PR-OP-02-060.md
.github/workflows/: publish.yml  release.yml
ci/: local_check.sh  package_binstall.sh  prepare_publish_workspace.sh
docs/: AUDIT_MESSAGING.md  AUDIT_MESSAGING_EVIDENCE.md  demo-universal-subscriptions.yaml  release_checklist.md
docs/domains/: common.md
src/: bin_resolver.rs  cards.rs  cli.rs  cloudflared.rs  component_qa_ops.rs  config.rs  config_gate.rs  discovery.rs  lib.rs  main.rs  operator_log.rs  providers.rs  runner_integration.rs  runtime_state.rs  secrets_client.rs  secrets_gate.rs  setup_input.rs  supervisor.rs
src/cli/: dev_secrets.rs
src/demo/: build.rs  event_router.rs  http_ingress.rs  ingress_dispatch.rs  ingress_types.rs  mod.rs  repl.rs  runner_host.rs  runtime.rs  setup.rs  timer_scheduler.rs
src/domains/: mod.rs
src/messaging_universal/: app.rs  dlq.rs  dto.rs  egress.rs  ingress.rs  mod.rs  provider.rs  retry.rs  tests.rs
src/project/: layout.rs
src/services/: components.rs  embedded.rs  messaging.rs  mod.rs  nats.rs  runner.rs
src/subscriptions_universal/: demo.rs  mod.rs  scheduler.rs  service.rs  store.rs
src/tools/: secrets.rs
tests/: abi_probe.rs  cloudflared_url_discovery.rs  demo_build.rs  demo_events_up.rs  demo_send_secret_redaction.rs  demo_setup_all_providers.rs  demo_up_smoke.rs  dev_detect.rs  dev_events_up.rs  discovery.rs  provider_setup_smoke.rs  subscriptions_universal.rs  supervisor_smoke.rs
