[package]
name = "greentic-operator"
version = "0.4.1"
edition = "2024"
rust-version = "1.90"
description = "Greentic operator CLI for local dev and demo orchestration."
license = "MIT"
repository = "https://github.com/greentic/greentic-operator"

[dependencies]
anyhow = "1.0"
clap = { version = "4.5", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml_bw = "2"
libc = "0.2"
zip = "7"
chrono = "0.4"
sysinfo = "0.37"
directories-next = "2"
greentic-runner-desktop = { version = "0.4", path = "../greentic-runner/crates/greentic-runner-desktop" }

[dev-dependencies]
tempfile = "3.10"
